fix for select popover being too small

--- a/packages/components/popover/src/popover.scss
+++ b/packages/components/popover/src/popover.scss
@@ -17,6 +17,7 @@
   border: var(--_border);
   border-radius: var(--_border-radius);
   box-shadow: var(--_box-shadow);
+  box-sizing: border-box;
   color: var(--_color);
   font: var(--_font);
   margin: 0;
